- Send multiple download links at once
- Permissions on start page announcements so visibility can be controlled
- Easy link checkbox to link e-mail conversations to a contact directly
- Contact photo's are shown in e-mail and can be set much more easily with download URL's.
- Custom field blocks feature
- Models show last modified by username
- In tickets a mail can also be send automatically when a ticket was just claimed
- Mail can be shared read only
- Send the invitation emails in the language of the participant if the participant is a known user of GO.
- Added selection for holiday file to the settings->regional settings panel and to the user dialog in the user module.
- Workflow: history can be appended to PDF files.
- Workflow: Files can be copied to a directory
- Holidays region can be selected per user in the settings dialog.

04-06-2013 4.1.73
- Apache alias defaults to z-push2 now. Be careful with upgrading 
  /etc/apache2/conf.d/groupoffice.conf if you still use z-push 1.5!
- Able to select out of more than 50 address books to add to address list.
- Updated Croatian
- SQL error in notes Upgrade.

29-05-2013 4.1.72
- Fixed Thai translation
- Updated German translation
- In ticket email templates, {contact:salutation} uses the ticket contact's set salutation.
- Fixed renderer for texts in grids
- Fixed comments response in actionDisplay for displaypanels
- ZpushAdmin: renamed comments into comment because comments was a reserved parameter in GO
- Better output of showing mailbox usages in Postfixadmin cron script.
- Better way of creating ZIP archive of e-mail attachments so that foreign characters will work on Windows
- Invalid event reminder property could prevent ActiveSync from syncing events.
- Removeduplicate functions in tasks, addressbooks and calendars are  now translatable
- $config['locale_all'] in config.php for Group-Office locale setting, example values are: "en_US.UTF-8" or "nb_NO.UTF-8".